Bug 363940 - DVB-T Usb Error message in channels list: No device found
Summary: DVB-T Usb Error message in channels list: No device found
Status: RESOLVED FIXED
Alias: None
Product: kaffeine
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.0.1
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Mauro Carvalho Chehab
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-06-04 13:02 UTC by Ivancan4
Modified: 2016-06-06 21:16 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ivancan4 2016-06-04 13:02:16 UTC
Version: Kaffeine 2.0

Every time I boot Kaffeine, In Digital tv - channels list - each channel clicked shows error message: No device found

DVB-T Usb Device is correctly plugged and starting kaffeine from terminal shows message:

"DvbLinuxDevice::startDevice: found dvb device "" / "Afatech AF9033 (DVB-T)"

Then, go to main menu - television - configure television - tab device - source -  choose autoscan - accept - then channels list works and does not display error messages (necessary to do it every time)

Reproducible: Always




Dvb-t usb device: AVermedia AVerTV Volar Green HD
Comment 1 Mauro Carvalho Chehab 2016-06-06 21:16:24 UTC
Git commit aad352d12268fca6de1bf929cefd8d02e6ef950a by Mauro Carvalho Chehab.
Committed on 06/06/2016 at 21:13.
Pushed by mauroc into branch 'master'.

dvbconfigdialog: save DVB device config when dialog is accepted

Right now, Kaffeine only saves the TV configuration when
Kaffeine is closed. If something gets wrong and Kaffeine is
aborted, the user will need to set the devices again.

To avoid that, let's save the DVB configuration when the
config dialog is accepted.

Signed-off-by: Mauro Carvalho Chehab <mchehab@osg.samsung.com>

M  +1    -0    src/dvb/dvbconfigdialog.cpp
M  +1    -2    src/dvb/dvbmanager.h

http://commits.kde.org/kaffeine/aad352d12268fca6de1bf929cefd8d02e6ef950a