dvbconfigdialog: save DVB device config when dialog is accepted

Right now, Kaffeine only saves the TV configuration when
Kaffeine is closed. If something gets wrong and Kaffeine is
aborted, the user will need to set the devices again.

To avoid that, let's save the DVB configuration when the
config dialog is accepted.

BUG: 363940

Signed-off-by: Mauro Carvalho Chehab <mchehab@osg.samsung.com>